fix: increase contrast for accessibility

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 /* Header colors */
 :root {
-  --mt-header-color-logo-text: #78787a;
+  --mt-header-color-logo-text: #595959;
   --mt-header-color-nav-icons: #3a3a3a;
   --mt-header-color-nav-links: #6f6f71;
   --mt-header-color-subnav-links: #fff;
