--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,7 +34,7 @@
   --mt-global-color-dove-gray: #666;
   --mt-global-color-blue-ribbon: #035fe6;
   --mt-global-color-light-blue: #BECAE9;
-  --mt-global-color-dark-blue: #215BBB;
+  --mt-global-color-dark-blue: #1b51a7;
   --mt-global-color-silver: #ccc;
   --mt-global-color-alabaste: #F7F7F7;
   --mt-global-color-gallery: #ECECEC;
@@ -45,18 +45,18 @@
   /* feature background colors */
   --mt-background-color-primary: var(--mt-global-color-white);
   --mt-background-color-secondary: var(--mt-global-color-black);
-  --mt-button-background-color-primary: var(--mt-global-color-accent-primary);
-  --mt-button-background-color-seconary: var(--mt-global-color-white);
+  --mt-button-background-color-primary: var(--mt-global-color-dark-blue);
+  --mt-button-background-color-secondary: var(--mt-global-color-white);
   --mt-input-background-color: var(--mt-background-color-primary);
 
   /* border colors */
-  --mt-button-border-color-primary: var(--mt-global-color-accent-primary);
+  --mt-button-border-color-primary: var(--mt-global-color-dark-blue);
   --mt-button-border-color-secondary: var(--mt-button-border-color-primary);
   --mt-input-border-color: var(--mt-global-color-base-secondary);
 
   /* feature colors */
   --mt-button-color-primary: var(--mt-global-color-white);
-  --mt-button-color-secondary: var(--mt-global-color-accent-primary);
+  --mt-button-color-secondary: var(--mt-global-color-dark-blue);
   --mt-button-hover-color-primary: var(--mt-global-color-accent-secondary);
   --mt-button-hover-color: var(--mt-global-color-dark-blue);
   --mt-button-hover-color-secondary: var(--mt-global-color-accent-tertiary);
@@ -589,7 +589,7 @@ button:disabled:hover {
 
 a.button.secondary,
 button.secondary {
-  background-color: var(--mt-button-background-color-seconary);
+  background-color: var(--mt-button-background-color-secondary);
   border-color: var(--mt-button-border-color-secondary);
   color: var(--mt-button-color-secondary);
 }
